--- a/src/CutMp3.WebApp/Client/_Imports.razor
+++ b/src/CutMp3.WebApp/Client/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using CutMp3.WebApp.Client
 @using CutMp3.WebApp.Client.Shared
+@using System.Text;
+@using System.Text.Json;
