--- a/src/CutMp3.WebApp/Client/Pages/Index.razor
+++ b/src/CutMp3.WebApp/Client/Pages/Index.razor
@@ -1,24 +1,34 @@
 ﻿@page "/"
 @using CutMp3.Domain.Models
+@inject HttpClient _httpClient
 
-<EditForm Model="@downloadSettings">
-    <div class="form-group row">
-        <label for="url" class="col-sm-2 col-form-label">
-            Url
-        </label>
-        <div class="col-sm-10">
-            <InputText id="url" class="form-control" placeholder="Url"
-                       @bind-Value="downloadSettings.Url" />
-        </div>
-    </div>
-    <button class="btn btn-primary" type="submit" @onclick=HandleSubmit>Submit</button>
+<EditForm Model="@_downloadSettings" OnValidSubmit="@HandleSubmit">
+	<div class="form-row">
+		<div class="form-group col-md-6">
+			<label for="url">Url</label>
+			<InputText id="url" class="form-control" placeholder="Url"
+					   @bind-Value="_downloadSettings.Url" />
+		</div>
+		<div class="form-group col-md-2">
+			<label for="extension">Extension</label>
+			<InputSelect id="extension" class="form-control" @bind-Value="_downloadSettings.Extension">
+				<option value=".mp4">.mp4</option>
+				<option value=".mp3">.mp3</option>
+			</InputSelect>
+		</div>
+	</div>
+	<button class="btn btn-primary" type="submit" @onclick="HandleSubmit">Submit</button>
 </EditForm>
 
 @code {
-    private DownloadSettings downloadSettings = new();
+	private DownloadSettings _downloadSettings = new();
+	private string _url = @"home/downloadsettings";
 
-    public async Task HandleSubmit()
-    {
-        await Task.Delay(1000);
-    }
+	public async Task HandleSubmit()
+	{
+		var dataJson = JsonSerializer.Serialize(_downloadSettings);
+		var stringContent = new StringContent(dataJson, Encoding.UTF8, "application/json");
+		var response = await _httpClient.PostAsync(_url, stringContent);
+		await Task.Run(() => Console.WriteLine("submit11"));
+	}
 }
