--- a/src/CutMp3.WebApp/Client/Pages/Index.razor
+++ b/src/CutMp3.WebApp/Client/Pages/Index.razor
@@ -18,7 +18,7 @@
 				</InputSelect>
 			</div>
 		</div>
-		<button class="btn btn-primary" type="submit" @onclick="HandleSubmit">Submit</button>
+		<button class="btn btn-primary" type="submit">Submit</button>
 	</EditForm>
 	<div class="overlay" hidden="@_hideOverlay">Loading...</div>
 @*</div>*@
@@ -36,7 +36,5 @@
 		var stringContent = new StringContent(dataJson, Encoding.UTF8, "application/json");
 		var response = await _httpClient.PostAsync(_url, stringContent);
 		_hideOverlay = true;
-
-		StateHasChanged();
 	}
 }
