--- a/src/CutMp3.WebApp/Client/_Imports.razor
+++ b/src/CutMp3.WebApp/Client/_Imports.razor
@@ -10,3 +10,5 @@
 @using CutMp3.WebApp.Client.Shared
 @using System.Text;
 @using System.Text.Json;
+@using CutMp3.Application.Services
+@using CutMp3.Domain.Enums
