--- a/src/CutMp3.WebApp/Client/Pages/Counter.razor
+++ b/src/CutMp3.WebApp/Client/Pages/Counter.razor
@@ -1,4 +1,5 @@
 ﻿@page "/counter"
+@inject ToastService toastService
 
 <h1>Counter</h1>
 
@@ -12,5 +13,6 @@
     private void IncrementCount()
     {
         currentCount++;
+        toastService.ShowToast("qwe", ToastLevel.Success);
     }
 }
