--- a/src/CutMp3.WebApp/Client/Pages/Index.razor
+++ b/src/CutMp3.WebApp/Client/Pages/Index.razor
@@ -1,6 +1,9 @@
 ﻿@page "/"
+@using Microsoft.AspNetCore.SignalR.Client
 @using CutMp3.Domain.Models
 @inject HttpClient _httpClient
+@inject NavigationManager NavigationManager
+@inject ToastService toastService
 
 @*<div class="container">*@
 	<EditForm Model="@_downloadSettings" OnValidSubmit="@HandleSubmit">
@@ -23,11 +26,37 @@
 	<div class="overlay" hidden="@_hideOverlay">Loading...</div>
 @*</div>*@
 
+<ul id="messagesList">
+    @foreach (var message in messages)
+    {
+        <li>@message</li>
+    }
+</ul>
+
 
 @code {
 	private DownloadSettings _downloadSettings = new() { Url = "", Extension = ".mp4" };
 	private string _url = @"home/downloadsettings";
 	private bool _hideOverlay = true;
+	private HubConnection hubConnection;
+	private List<string> messages = new List<string>();
+
+	protected override async Task OnInitializedAsync()
+    {
+        hubConnection = new HubConnectionBuilder()
+            .WithUrl(NavigationManager.ToAbsoluteUri("/downloadhub"))
+            .Build();
+
+        hubConnection.On<string, string>("ReceiveMessage", (user, message) =>
+        {
+            var encodedMsg = $"{user}: {message}";
+            messages.Add(encodedMsg);
+			toastService.ShowToast(encodedMsg, ToastLevel.Warning);
+            StateHasChanged();
+        });
+
+        await hubConnection.StartAsync();
+    }
 
 	public async Task HandleSubmit()
 	{
