--- a/src/CutMp3.WebApp/Client/Shared/ToastBase.razor
+++ b/src/CutMp3.WebApp/Client/Shared/ToastBase.razor
@@ -11,40 +11,33 @@
 </div>
 
 @code {
-    protected string Heading {
-        get;
-        set;
-    }
-    protected string Message {
-        get;
-        set;
-    }
-    protected bool IsVisible {
-        get;
-        set;
-    }
-    protected string BackgroundCssClass {
-        get;
-        set;
-    }
-    protected string IconCssClass {
-        get;
-        set;
-    }
-    protected override void OnInitialized() {
+    protected string Heading { get; set; }
+    protected string Message { get; set; }
+    protected bool IsVisible { get; set; }
+    protected string BackgroundCssClass { get; set; }
+    protected string IconCssClass { get; set; }
+
+    protected override void OnInitialized() 
+    {
         toastService.OnShow += ShowToast;
         toastService.OnHide += HideToast;
     }
-    private void ShowToast(string message, ToastLevel level) {
+
+    private void ShowToast(string message, ToastLevel level) 
+    {
         BuildToastSettings(level, message);
         IsVisible = true;
         StateHasChanged();
     }
-    private void HideToast() {
+
+    private void HideToast() 
+    {
         IsVisible = false;
         StateHasChanged();
     }
-    private void BuildToastSettings(ToastLevel level, string message) {
+
+    private void BuildToastSettings(ToastLevel level, string message) 
+    {
         switch (level) {
             case ToastLevel.Info:
                 BackgroundCssClass = "bg-info";
@@ -69,7 +62,9 @@
         }
         Message = message;
     }
-    public void Dispose() {
+
+    public void Dispose() 
+    {
         toastService.OnShow -= ShowToast;
     }
 }
